# Advent-of-Code

./: .editorconfig  .gitignore  README.md
2021/Rust/day01/src/: main.rs  tests.rs
2021/Rust/day02/src/: main.rs  tests.rs
2022/: README.md
2022/Rust/day01/src/: main.rs  tests.rs
2022/Rust/day02/src/: main.rs  tests.rs
2022/Rust/day03/: Cargo.toml
2022/Rust/day03/src/: main.rs  tests.rs
2022/Rust/day04/src/: main.rs  tests.rs
2022/Rust/day05/src/: main.rs  tests.rs  types.rs
2022/Rust/day06/src/: main.rs  tests.rs
2023/: Cargo.toml  README.md  justfile
2023/boilerplate/: Cargo.toml
2023/boilerplate/src/: lib.rs  part1.rs  part2.rs
2023/day01/: Cargo.toml
2023/day01/src/: errors.rs  lib.rs  part1.rs  part2.rs
2023/day02/: Cargo.toml
2023/day02/src/: lib.rs  part1.rs  part2.rs
