[workspace]
resolver = "2"
members = ["day*", "boilerplate"]

[workspace.dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.50"
nom = "7.1.3"

[profile.release]
strip = true      # Automagically strip symbols from the library
opt-level = "z"   # Highest optimisation
lto = true        # Enable link time optimisation
codegen-units = 1 # Maximise size reduction optimisation
panic = 'abort'   # Aborts on panic